[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/BoxesDream.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/GameOverUI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 108
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 108
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 108
font_data = ExtResource( 1 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "You Win"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -52.0
margin_right = 512.0
margin_bottom = 52.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgain" type="Button" parent="Buttons"]
margin_left = 240.0
margin_right = 453.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 2 )
text = "Try Again"

[node name="MainMenu" type="Button" parent="Buttons"]
margin_left = 553.0
margin_right = 783.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"
[connection signal="pressed" from="Buttons/TryAgain" to="." method="_on_TryAgain_pressed"]
[connection signal="pressed" from="Buttons/MainMenu" to="." method="_on_MainMenu_pressed"]
